--- a/experiment.tex
+++ b/experiment.tex
@@ -75,4 +75,10 @@
 \chapter{Experiments}
 \section{Error in Small Angle Approximation of a Pendulum}
 \input{chapters/Experiment1}
+\chapter{Conclusion}
+\input{chapters/Introduction}
+\chapter{Acknowledgements}
+\input{chapters/Introduction}
+\chapter{Bibliography}
+\input{chapters/Introduction}
 \end{document}
