Graphs, and reordering sections

--- a/experiment.tex
+++ b/experiment.tex
@@ -72,16 +72,17 @@
 
 \end{titlepage}
 
+\chapter{Acknowledgements}
+\input{chapters/Introduction}
 \tableofcontents
 \chapter{Introduction}
 \input{chapters/Introduction}
-
-\chapter{Experiments}
+\chapter{Experimental details}
 \section{Error in Small Angle Approximation of a Pendulum}
 \input{chapters/Experiment1}
 \chapter{Conclusion}
 \input{chapters/Introduction}
-\chapter{Acknowledgements}
+\chapter{Scope for further study}
 \input{chapters/Introduction}
 \chapter{Bibliography}
 \input{chapters/Introduction}
