Revert to d6009386153e4b8b810a2406a50ebe4c75e2e1f7

--- a/experiment.tex
+++ b/experiment.tex
@@ -12,7 +12,6 @@
 \usepackage{enumerate}
 \usepackage{gensymb}
 \usepackage{array}
-\usepackage[version=4]{mhchem}
 
 \renewcommand*\contentsname{Index}
 \renewcommand*\thesection{\arabic{section}}
@@ -57,13 +56,13 @@
 \center
 \vspace*{3cm} 
 
-\textsc{\LARGE Chemistry Experiment Project}\\[1.5cm]
+\textsc{\LARGE Physics Experiment Project}\\[1.5cm]
 \textsc{\Large Class XII A}\\[0.5cm]
 \textsc{\large 2017-18}\\[0.5cm]
 
 
 \HRule \\[0.4cm]
-{ \LARGE \bfseries Enthalpy of Formation of Magnesium Oxide}\\[0.4cm]
+{ \huge \bfseries Simple Harmonic Motion}\\[0.4cm]
 \HRule \\[1.5cm]
  
 
@@ -71,7 +70,7 @@
 \large Rishit \textsc{Bansal 34}\\
 \large Apurva \textsc{Kulkarni 5}\\[2cm]
 
-\includegraphics[width=7cm]{title}
+\includegraphics[width=9cm]{title2}
 \vfill
 
 \end{titlepage}
@@ -87,18 +86,19 @@
 \vspace*{6cm}
 \begin{figure}[h]
   \begin{center}
-    \includegraphics[width=10cm]{fig1}
+    \includegraphics[width=10cm]{fig-1}
     \end{center}
-  \caption*{Fig.1 Hess's Law}
+  \caption*{Fig.1 Forces in a pendulum system}
  \end{figure}
 \cleardoublepage
 \chapter{Experimental details}
-\section{Enthalpy of formation of Magnesium Oxide}
-\input{chapters/Experiment1.tex}
-
+\section{Error in Small Angle Approximation of a Pendulum}
+\input{chapters/Experiment1}
 \cleardoublepage
 \chapter{Conclusion}
 \input{chapters/Conclusion}
+\section{Scope for Further Study}
+\input{chapters/Scope}
 \section{Bibliography}
 \input{chapters/Bibliography}
 \end{document}
